feat: event search and validation