@@ -13,10 +13,12 @@ import com.rabin.backend.repository.EventTagMapRepository;
 import com.rabin.backend.repository.EventTagRepository;
 import com.rabin.backend.repository.UserRepository;
 import com.rabin.backend.util.FileUtil;
+import com.rabin.backend.util.Haversine;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -44,60 +46,10 @@ public class EventService {
         log.info("📝 Creating event: title='{}', organizerId={}", dto.getTitle(), organizerId);
 
         // Validate required fields
-        if (dto.getTitle() == null || dto.getTitle().trim().isEmpty()) {
-            log.error("❌ Validation failed: Event title is required");
-            throw new IllegalArgumentException("Event title is required and cannot be empty");
-        }
+        validateBasicFields(dto);
 
-        if (dto.getDescription() == null || dto.getDescription().trim().isEmpty()) {
-            log.error("❌ Validation failed: Event description is required");
-            throw new IllegalArgumentException("Event description is required and cannot be empty");
-        }
-
-        if (dto.getVenue() == null || dto.getVenue().trim().isEmpty()) {
-            log.error("❌ Validation failed: Event venue is required");
-            throw new IllegalArgumentException("Event venue is required and cannot be empty");
-        }
-
-        if (dto.getEventDate() == null) {
-            log.error("❌ Validation failed: Event date is required");
-            throw new IllegalArgumentException("Event date is required");
-        }
-
-        if (dto.getLatitude() == null) {
-            log.error("❌ Validation failed: Latitude is required");
-            throw new IllegalArgumentException("Latitude is required");
-        }
-
-        if (dto.getLongitude() == null) {
-            log.error("❌ Validation failed: Longitude is required");
-            throw new IllegalArgumentException("Longitude is required");
-        }
-
-        // Validate latitude range (-90 to 90)
-        if (dto.getLatitude() < -90 || dto.getLatitude() > 90) {
-            log.error("❌ Validation failed: Invalid latitude value: {}", dto.getLatitude());
-            throw new IllegalArgumentException("Latitude must be between -90 and 90 degrees");
-        }
-
-        // Validate longitude range (-180 to 180)
-        if (dto.getLongitude() < -180 || dto.getLongitude() > 180) {
-            log.error("❌ Validation failed: Invalid longitude value: {}", dto.getLongitude());
-            throw new IllegalArgumentException("Longitude must be between -180 and 180 degrees");
-        }
-
-        // Validate paid event fields
-        if (dto.getIsPaid() != null && dto.getIsPaid()) {
-            if (dto.getPrice() == null || dto.getPrice() <= 0) {
-                log.error("❌ Validation failed: Price must be greater than 0 for paid events");
-                throw new IllegalArgumentException("Price must be greater than 0 for paid events");
-            }
-        }
-
-        if (dto.getAvailableSeats() != null && dto.getAvailableSeats() < 0) {
-            log.error("❌ Validation failed: Available seats cannot be negative");
-            throw new IllegalArgumentException("Available seats cannot be negative");
-        }
+        // Validate and normalize start/end dates
+        validateAndNormalizeEventDates(dto);
 
         // Validate organizer
         User organizer = userRepository.findById(organizerId)
@@ -107,20 +59,7 @@ public class EventService {
                 });
 
         // Validate event tags
-        if (dto.getTags() != null && !dto.getTags().isEmpty()) {
-            for (String tagName : dto.getTags()) {
-                try {
-                    InterestCategory.valueOf(tagName);
-                } catch (IllegalArgumentException e) {
-                    log.error("❌ Invalid event tag: '{}'. Valid tags are: {}", tagName, 
-                            String.join(", ", java.util.Arrays.stream(InterestCategory.values())
-                                    .map(Enum::name).toArray(String[]::new)));
-                    throw new IllegalArgumentException("Invalid event tag: '" + tagName + "'. Valid tags are: " + 
-                            String.join(", ", java.util.Arrays.stream(InterestCategory.values())
-                                    .map(Enum::name).toArray(String[]::new)));
-                }
-            }
-        }
+        validateEventTags(dto.getTags());
 
         // Handle event image upload
         String eventImageUrl = null;
@@ -134,18 +73,18 @@ public class EventService {
             }
         }
 
+        // Create and save event
         Event event = new Event();
         event.setTitle(dto.getTitle());
         event.setDescription(dto.getDescription());
         event.setVenue(dto.getVenue());
         event.setEventImageUrl(eventImageUrl);
-        event.setEventDate(dto.getEventDate());
+        event.setStartDate(dto.getStartDate());
+        event.setEndDate(dto.getEndDate());
         event.setLatitude(dto.getLatitude());
         event.setLongitude(dto.getLongitude());
         event.setEventStatus(EventStatus.ACTIVE);
         event.setCreatedBy(organizer);
-
-        // Set paid event fields
         event.setIsPaid(dto.getIsPaid() != null ? dto.getIsPaid() : false);
         event.setPrice(dto.getPrice() != null ? dto.getPrice() : 0.0);
         event.setAvailableSeats(dto.getAvailableSeats());
@@ -154,7 +93,7 @@ public class EventService {
         Event saved = eventRepository.save(event);
         log.info("Event created with id: {} by organizer: {}", saved.getId(), organizerId);
 
-        // Save event tags
+        // Save tags
         if (dto.getTags() != null && !dto.getTags().isEmpty()) {
             saveEventTags(saved, dto.getTags());
         }
@@ -167,51 +106,54 @@ public class EventService {
         Event event = eventRepository.findById(eventId)
                 .orElseThrow(() -> new IllegalArgumentException("Event not found"));
 
-        // Check if organizer owns this event
+        // Check organizer
         if (!event.getCreatedBy().getId().equals(organizerId)) {
             throw new IllegalArgumentException("You are not authorized to update this event");
         }
 
-        // Update fields if provided
-        if (dto.getTitle() != null && !dto.getTitle().trim().isEmpty()) {
-            event.setTitle(dto.getTitle());
-        }
-        if (dto.getDescription() != null) {
-            event.setDescription(dto.getDescription());
-        }
-        if (dto.getVenue() != null) {
-            event.setVenue(dto.getVenue());
-        }
-        if (dto.getEventDate() != null) {
-            event.setEventDate(dto.getEventDate());
-        }
-        if (dto.getLatitude() != null) {
-            event.setLatitude(dto.getLatitude());
-        }
-        if (dto.getLongitude() != null) {
-            event.setLongitude(dto.getLongitude());
+        // Update basic fields
+        if (dto.getTitle() != null && !dto.getTitle().trim().isEmpty()) event.setTitle(dto.getTitle());
+        if (dto.getDescription() != null) event.setDescription(dto.getDescription());
+        if (dto.getVenue() != null) event.setVenue(dto.getVenue());
+        if (dto.getLatitude() != null) event.setLatitude(dto.getLatitude());
+        if (dto.getLongitude() != null) event.setLongitude(dto.getLongitude());
+
+        // Update dates if provided
+        if (dto.getStartDate() != null || dto.getEndDate() != null) {
+            LocalDateTime start = dto.getStartDate() != null ? dto.getStartDate() : event.getStartDate();
+            LocalDateTime end = dto.getEndDate() != null ? dto.getEndDate() : event.getEndDate();
+
+            CreateEventDto tempDto = new CreateEventDto();
+            tempDto.setStartDate(start);
+            tempDto.setEndDate(end);
+
+            validateAndNormalizeEventDates(tempDto);
+
+            event.setStartDate(tempDto.getStartDate());
+            event.setEndDate(tempDto.getEndDate());
         }
 
-        // Handle event image upload
+        // Update paid event fields
+        if (dto.getIsPaid() != null) event.setIsPaid(dto.getIsPaid());
+        if (dto.getPrice() != null) event.setPrice(dto.getPrice());
+        if (dto.getAvailableSeats() != null) event.setAvailableSeats(dto.getAvailableSeats());
+
+        // Update image if provided
         if (dto.getEventImage() != null && !dto.getEventImage().isEmpty()) {
             try {
-                String eventImageUrl = FileUtil.saveFile(dto.getEventImage(), "events");
-                event.setEventImageUrl(eventImageUrl);
-                log.debug("Event image updated: {}", eventImageUrl);
+                String imageUrl = FileUtil.saveFile(dto.getEventImage(), "events");
+                event.setEventImageUrl(imageUrl);
+                log.debug("Event image updated: {}", imageUrl);
             } catch (Exception e) {
                 log.error("Failed to save event image", e);
                 throw new IllegalArgumentException("Failed to save event image: " + e.getMessage());
             }
         }
 
-        // Update tags if provided
+        // Update tags
         if (dto.getTags() != null) {
-            // Delete existing tags
             eventTagMapRepository.deleteByEvent(event);
-            // Save new tags
-            if (!dto.getTags().isEmpty()) {
-                saveEventTags(event, dto.getTags());
-            }
+            if (!dto.getTags().isEmpty()) saveEventTags(event, dto.getTags());
         }
 
         Event updated = eventRepository.save(event);
@@ -225,7 +167,6 @@ public class EventService {
         Event event = eventRepository.findById(eventId)
                 .orElseThrow(() -> new IllegalArgumentException("Event not found"));
 
-        // Check if organizer owns this event
         if (!event.getCreatedBy().getId().equals(organizerId)) {
             throw new IllegalArgumentException("You are not authorized to cancel this event");
         }
@@ -235,86 +176,67 @@ public class EventService {
         log.info("Event cancelled: {}", eventId);
     }
 
+    // Get all active events (PUBLIC)
     public List<EventResponseDto> getActiveEvents() {
         return eventRepository.findByEventStatus(EventStatus.ACTIVE)
                 .stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // Get event by ID (PUBLIC)
     public EventResponseDto getEventById(Long eventId) {
         Event event = eventRepository.findById(eventId)
                 .orElseThrow(() -> new IllegalArgumentException("Event not found"));
         return mapToResponse(event);
     }
 
-    /**
-     * Get events created by a specific organizer
-     */
+    // Get events created by a specific organizer (ORGANIZER)
     public List<EventResponseDto> getOrganizerEvents(Long organizerId) {
-        log.debug("Getting events for organizer: {}", organizerId);
-
-        // Verify organizer exists
+        // Ensure organizer exists
         userRepository.findById(organizerId)
                 .orElseThrow(() -> new IllegalArgumentException("Organizer not found"));
 
         return eventRepository.findByCreatedBy_Id(organizerId)
                 .stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Get events filtered by location (within radius in km)
-     */
+    // Get events filtered by location (optional lat/lon & radius in km)
     public List<EventResponseDto> getEventsByLocation(Double lat, Double lon, Double radiusKm) {
-        log.debug("Getting events near location: lat={}, lon={}, radius={}km", lat, lon, radiusKm);
-
-        List<Event> allActiveEvents = eventRepository.findByEventStatus(EventStatus.ACTIVE);
-
-        if (lat == null || lon == null) {
-            return allActiveEvents.stream()
-                    .map(this::mapToResponse)
-                    .toList();
-        }
-
-        Double radius = radiusKm != null ? radiusKm : 50.0; // Default 50km radius
-
-        return allActiveEvents.stream()
-                .filter(event -> {
-                    double distance = calculateDistance(lat, lon, event.getLatitude(), event.getLongitude());
-                    return distance <= radius;
-                })
-                .map(this::mapToResponse)
-                .toList();
-    }
-
-    /**
-     * Search events with multiple filters
-     */
-    public List<EventResponseDto> searchEvents(Double lat, Double lon, Double radiusKm,
-                                                List<String> tags, String searchTerm) {
-        log.debug("Searching events with filters - lat={}, lon={}, radius={}km, tags={}, searchTerm={}",
-                lat, lon, radiusKm, tags, searchTerm);
-
         List<Event> events = eventRepository.findByEventStatus(EventStatus.ACTIVE);
 
-        // Filter by location if provided
+        if (lat == null || lon == null) {
+            return events.stream().map(this::mapToResponse).collect(Collectors.toList());
+        }
+
+        double radius = radiusKm != null ? radiusKm : 50.0;
+
+        return events.stream()
+                .filter(e -> Haversine.distance(lat, lon, e.getLatitude(), e.getLongitude()) <= radius)
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
+
+    // Search events with filters (location, radius, tags, search term)
+    public List<EventResponseDto> searchEvents(Double lat, Double lon, Double radiusKm,
+                                               List<String> tags, String searchTerm) {
+        List<Event> events = eventRepository.findByEventStatus(EventStatus.ACTIVE);
+
+        // Filter by location
         if (lat != null && lon != null) {
-            Double radius = radiusKm != null ? radiusKm : 50.0;
+            double radius = radiusKm != null ? radiusKm : 50.0;
             events = events.stream()
-                    .filter(event -> {
-                        double distance = calculateDistance(lat, lon, event.getLatitude(), event.getLongitude());
-                        return distance <= radius;
-                    })
+                    .filter(e -> Haversine.distance(lat, lon, e.getLatitude(), e.getLongitude()) <= radius)
                     .toList();
         }
 
-        // Filter by tags if provided
+        // Filter by tags
         if (tags != null && !tags.isEmpty()) {
             events = events.stream()
-                    .filter(event -> {
-                        List<String> eventTags = eventTagMapRepository.findByEvent(event)
+                    .filter(e -> {
+                        List<String> eventTags = eventTagMapRepository.findByEvent(e)
                                 .stream()
                                 .map(tm -> tm.getEventTag().getTagKey())
                                 .toList();
@@ -323,42 +245,75 @@ public class EventService {
                     .toList();
         }
 
-        // Filter by search term if provided
+        // Filter by search term
         if (searchTerm != null && !searchTerm.trim().isEmpty()) {
             String searchLower = searchTerm.toLowerCase();
             events = events.stream()
-                    .filter(event ->
-                        event.getTitle().toLowerCase().contains(searchLower) ||
-                        event.getDescription().toLowerCase().contains(searchLower) ||
-                        event.getVenue().toLowerCase().contains(searchLower)
-                    )
+                    .filter(e -> e.getTitle().toLowerCase().contains(searchLower) ||
+                            e.getDescription().toLowerCase().contains(searchLower) ||
+                            e.getVenue().toLowerCase().contains(searchLower))
                     .toList();
         }
 
-        return events.stream()
-                .map(this::mapToResponse)
-                .toList();
+        return events.stream().map(this::mapToResponse).toList();
     }
 
-    // Helper methods
 
-    /**
-     * Calculate distance between two coordinates using Haversine formula
-     * Returns distance in kilometers
-     */
-    private double calculateDistance(double lat1, double lon1, double lat2, double lon2) {
-        final int EARTH_RADIUS_KM = 6371;
+    // --------------------- Helper Methods ---------------------
 
-        double dLat = Math.toRadians(lat2 - lat1);
-        double dLon = Math.toRadians(lon2 - lon1);
+    private void validateBasicFields(CreateEventDto dto) {
+        if (dto.getTitle() == null || dto.getTitle().trim().isEmpty())
+            throw new IllegalArgumentException("Event title is required");
+        if (dto.getDescription() == null || dto.getDescription().trim().isEmpty())
+            throw new IllegalArgumentException("Event description is required");
+        if (dto.getVenue() == null || dto.getVenue().trim().isEmpty())
+            throw new IllegalArgumentException("Event venue is required");
 
-        double a = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-                Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2)) *
-                        Math.sin(dLon / 2) * Math.sin(dLon / 2);
+        if (dto.getLatitude() == null || dto.getLongitude() == null)
+            throw new IllegalArgumentException("Latitude and Longitude are required");
+        if (dto.getLatitude() < -90 || dto.getLatitude() > 90)
+            throw new IllegalArgumentException("Latitude must be between -90 and 90");
+        if (dto.getLongitude() < -180 || dto.getLongitude() > 180)
+            throw new IllegalArgumentException("Longitude must be between -180 and 180");
 
-        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+        if (dto.getIsPaid() != null && dto.getIsPaid() && (dto.getPrice() == null || dto.getPrice() <= 0))
+            throw new IllegalArgumentException("Price must be greater than 0 for paid events");
+        if (dto.getAvailableSeats() != null && dto.getAvailableSeats() < 0)
+            throw new IllegalArgumentException("Available seats cannot be negative");
+    }
 
-        return EARTH_RADIUS_KM * c;
+    private void validateEventTags(List<String> tags) {
+        if (tags == null) return;
+        for (String tagName : tags) {
+            try {
+                InterestCategory.valueOf(tagName);
+            } catch (IllegalArgumentException e) {
+                throw new IllegalArgumentException("Invalid event tag: " + tagName);
+            }
+        }
+    }
+
+    private void validateAndNormalizeEventDates(CreateEventDto dto) {
+        LocalDateTime now = LocalDateTime.now();
+
+        if (dto.getStartDate() == null)
+            throw new IllegalArgumentException("Event start date is required");
+        if (dto.getStartDate().isBefore(now))
+            throw new IllegalArgumentException("Event start date cannot be in the past");
+
+        if (dto.getEndDate() == null) {
+            dto.setEndDate(dto.getStartDate().plusHours(23).plusMinutes(59).plusSeconds(59));
+        }
+
+        if (dto.getEndDate().isBefore(dto.getStartDate()))
+            throw new IllegalArgumentException("Event end date cannot be before start date");
+
+        if (dto.getEndDate().isBefore(now))
+            throw new IllegalArgumentException("Event end date cannot be in the past");
+
+        // normalize seconds/nanos
+        dto.setStartDate(dto.getStartDate().withSecond(0).withNano(0));
+        dto.setEndDate(dto.getEndDate().withSecond(0).withNano(0));
     }
 
     private void saveEventTags(Event event, List<String> tagNames) {
@@ -366,7 +321,6 @@ public class EventService {
             try {
                 InterestCategory category = InterestCategory.valueOf(tagName);
 
-                // Get or create EventTag
                 EventTag tag = eventTagRepository.findByTagKey(category.name())
                         .orElseGet(() -> {
                             EventTag newTag = new EventTag();
@@ -375,7 +329,6 @@ public class EventService {
                             return eventTagRepository.save(newTag);
                         });
 
-                // Create EventTagMap
                 EventTagMap tagMap = new EventTagMap();
                 tagMap.setEvent(event);
                 tagMap.setEventTag(tag);
@@ -395,20 +348,19 @@ public class EventService {
         dto.setDescription(event.getDescription());
         dto.setVenue(event.getVenue());
         dto.setEventImageUrl(event.getEventImageUrl());
-        dto.setEventDate(event.getEventDate());
+        dto.setStartDate(event.getStartDate());
+        dto.setEndDate(event.getEndDate());
         dto.setLatitude(event.getLatitude());
         dto.setLongitude(event.getLongitude());
         dto.setOrganizerName(event.getCreatedBy().getFullName());
         dto.setEventStatus(event.getEventStatus().name());
 
-        // Get event tags
         List<EventTagMap> tagMaps = eventTagMapRepository.findByEvent(event);
         List<String> tags = tagMaps.stream()
                 .map(tm -> tm.getEventTag().getTagKey())
                 .collect(Collectors.toList());
         dto.setTags(tags);
 
-        // Set paid event fields
         dto.setIsPaid(event.getIsPaid());
         dto.setPrice(event.getPrice());
         dto.setAvailableSeats(event.getAvailableSeats());
